--- a/index.html
+++ b/index.html
@@ -1,35 +1,68 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
-  <div class="swiper-container">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide">
-        <div class="card">
-          <img src="image1.jpg" alt="Image 1">
-          <div class="card-text">
-            <h2>Card 1</h2>
-            <p>This is the content of card 1.</p>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="swiper-container">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <img src="IMG/Certificates (1).png" class="img-border"/>
+          <div class="swiper-slide-content">
+            <h2>กิจกรรม CS Camp ครั้งที่ 15</h2>
+            <p>
+              ได้เข้าร่วมกิจกรรม CS Camp ครั้งที่ 15 ที่จัดโดยคณะวิทยา่ศาสตร์<br>
+              สาขาวิทยาการคอมพิวเตอร์
+              สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง<br> 
+              เป็นกิจกรรมที่ต้องผ่านการตอบคำถามของพี่ๆ ในคณะนี้ จึงจะได้เข้าร่วม<br> 
+              CS camp 15 เป็นกิจกรรมที่ให้ความรู้ ทางด้าน IT และการประยุกต์ใช้
+              Micro:bit<br> 
+            </p>
           </div>
         </div>
-      </div>
-      <div class="swiper-slide">
-        <div class="card">
-          <img src="image2.jpg" alt="Image 2">
-          <div class="card-text">
-            <h2>Card 2</h2>
-            <p>This is the content of card 2.</p>
+        <div class="swiper-slide">
+          <img src="IMG/42 bangkok.png" alt="Image 2" />
+          <div class="swiper-slide-content">
+            <h2>กิจกรรม CS Camp ครั้งที่ 15</h2>
+            <p>
+              ได้เข้าร่วมกิจกรรม CS Camp ครั้งที่ 15 ที่จัดโดยคณะวิทยา่ศาสตร์<br>
+              สาขาวิทยาการคอมพิวเตอร์
+              สถาบันเทคโนโลยีพระจอมเกล้าเจ้าคุณทหารลาดกระบัง<br> 
+              เป็นกิจกรรมที่ต้องผ่านการตอบคำถามของพี่ๆ ในคณะนี้ จึงจะได้เข้าร่วม<br> 
+              CS camp 15 เป็นกิจกรรมที่ให้ความรู้ ทางด้าน IT และการประยุกต์ใช้
+              Micro:bit<br> 
+            </p>
           </div>
         </div>
+        <!-- Add more swiper-slide elements for additional cards -->
       </div>
-      <!-- Add more slides as needed -->
+      <!-- Add pagination and navigation if needed -->
+      <div class="swiper-pagination"></div>
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
     </div>
-    <!-- Add navigation buttons or pagination here if desired -->
-  </div>
-  
-  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-  <script src="script.js"></script>
-</body>
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script>
+      // Initialize Swiper
+      var swiper = new Swiper(".swiper-container", {
+        slidesPerView: "auto", // To create a responsive layout
+        spaceBetween: 20,
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+      });
+    </script>
+  </body>
 </html>
