Front : update cetificates.html

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="project-layer">
                     <h4>Certificates</h4>
                     <h5>เกียรติบัตร</h5>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="certificates.html"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
